force-app/main/default/objects/npsp__Trigger_Handler__c/fields/npsp__Active__c.field-meta.xml
<CustomField>
    <fullName>npsp__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this Trigger Handler is in use.</description>
    <inlineHelpText>Indica que este módulo esta activo</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>