force-app/main/default/objects/npsp__Trigger_Handler__c/fields/npsp__Load_Order__c.field-meta.xml
<CustomField>
    <fullName>npsp__Load_Order__c</fullName>
    <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
    <inlineHelpText>Orden en el cual este módulo debe correr, ayudando a mantener dependencia en los módulos y los datos.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>