force-app/main/default/objects/npsp__Trigger_Handler__c/fields/npsp__Usernames_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>npsp__Usernames_to_Exclude__c</fullName>
    <description>A semicolon-separated list of Usernames that this Trigger Handler will not run for. Leave blank to run for all Users.</description>
    <inlineHelpText>Una lista de separada por punto y coma de nombres de usuario en los que no se ejecutará este controlador de desencadenador. Déjela en blanco para la ejecución para todos los usuarios.</inlineHelpText>
    <label>Usernames to Exclude</label>
    <type>TextArea</type>
</CustomField>