force-app/main/default/objects/npsp__Trigger_Handler__c/listViews/MSF_TDTM.listView-meta.xml
<ListView>
    <fullName>MSF_TDTM</fullName>
    <columns>npsp__Active__c</columns>
    <columns>npsp__Object__c</columns>
    <columns>NAME</columns>
    <columns>npsp__Class__c</columns>
    <columns>npsp__Trigger_Action__c</columns>
    <columns>npsp__Load_Order__c</columns>
    <columns>npsp__User_Managed__c</columns>
    <columns>npsp__Asynchronous__c</columns>
    <columns>npsp__Usernames_to_Exclude__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Class__c</field>
        <operation>startsWith</operation>
        <value>MSF_</value>
    </filters>
    <label>MSF_TDTM</label>
</ListView>