force-app/main/default/objects/npsp__Trigger_Handler__c/listViews/npsp__All.listView-meta.xml
<ListView>
    <fullName>npsp__All</fullName>
    <columns>npsp__Active__c</columns>
    <columns>npsp__Object__c</columns>
    <columns>NAME</columns>
    <columns>npsp__Class__c</columns>
    <columns>npsp__Trigger_Action__c</columns>
    <columns>npsp__Load_Order__c</columns>
    <columns>npsp__User_Managed__c</columns>
    <columns>npsp__Asynchronous__c</columns>
    <columns>npsp__Usernames_to_Exclude__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>