force-app/main/default/objects/npsp__Trigger_Handler__c/listViews/TriggerByObject.listView-meta.xml
<ListView>
    <fullName>TriggerByObject</fullName>
    <columns>NAME</columns>
    <columns>npsp__Class__c</columns>
    <columns>npsp__Object__c</columns>
    <columns>npsp__Trigger_Action__c</columns>
    <columns>npsp__Active__c</columns>
    <columns>npsp__Usernames_to_Exclude__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Object__c</field>
        <operation>contains</operation>
        <value>Oppo</value>
    </filters>
    <label>TriggerByObject</label>
</ListView>